2005-02-19  Tim-Philipp Müller  <tim at centricular dot net>

	* RELEASE:
	  Added some notes on which win32 files need to be changed
	  when new source files and/or new symbols are added.
	  
	* NEWS:
	* configure.ac:
	  Set to 2.0.7
	  
	* gnet.def:
	  Make sure the new gnet_conn_http_* and gnet_http_get symbols
	  are exported in the win32 DLLs.

=== release 2.0.6 ===

2005-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	  Add --enable-gtk-doc to DISTCHECK_CONFIGURE_FLAGS,
	  fixing 'make distcheck'.

	* NEWS:
	* README:
	  Update for 2.0.6

2005-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* GNET.DSP:
	* src/makefile.mingw:
	  Add conn-http.[ch] 

	* NEWS:
	  update

2005-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/dnslookup.c: (main):
	  getopt returns an int, not a char; fixes compilation 
	  under strict conditions. (fixes #167706, patch by 
	  Joseph Sacco)

2005-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  When building on win32 using configure/autotools, always
	  define HAVE_IPV6, so that GNET_ADDRLEN is the right
	  size for ipv6 structs and calls to getnameinfo() don't
	  crash on IPV6-enabled systems (gnetconfig.h.win32 where 
	  HAVE_IPV6 is already defined is not used when building 
	  on win32 using the autotools). Fixes #142644

2005-02-04  Tim-Philipp Müller  <tim at centricular dot net>

	* AUTHORS:
	  Fix my e-mail address
	  
	* acinclude.m4:
	* autogen.sh:
	* configure.ac:
	  Use GTK_DOC_CHECK macro
	  
	* doc/Makefile.am:
	  Update gtk-doc build magic
	  
	* doc/gnet-docs.sgml:
	  Fix build issue with some jade versions: add xml header, 
	  change to OASIS/DTD DocBook XML V4.1.2 and fix entities 
	  and comments accordingly; update copyright to include 2005.
	
	* src/mcast.c:
	  Properly quote arguments to HTML tags in inline docs to fix 
	  build issues.

2005-02-01  Tim-Philipp Müller  <tim at centricular dot net>
