@@ -1,0 +1,1 @@
+@GNET_VERSION@
